--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -2,7 +2,7 @@
 
 .container {
     position: relative;
-    background-color: rgba(12,12,12,0.6);
+    background-color: rgba(12, 12, 12, 0.5);
     border-radius: 15px;
     padding: 73px;
     margin-top: 129px;
@@ -60,6 +60,21 @@
 }
 .aboutItem p {
     font-size: 25px;
+}
+
+.topBlur{
+    display: none;
+    position: absolute;
+    width: 20vw;
+    height: 20vw;
+    min-width: 150;
+    min-height: 150px;
+    top: 300px;
+    left: -10vw;
+    border-radius: 764px;
+    background: rgba(25,55,109,0.7);
+    filter: blur(100px);
+    z-index: -2;
 }
 
 @media screen and (max-width: 830px){
