--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -24,9 +24,12 @@
     font-weight: 900;
     margin-bottom: 33px;
     font-family: var(--font-roboto);
-    background: linear-gradient(90deg,rgb(255, 255, 255,1) 50%,rgba(255,255,255,0) 120%);
+    background: linear-gradient(90deg,rgb(255, 255, 255,1) 75%,rgba(255,255,255,0) 120%);
     -webkit-text-fill-color: transparent;
     -webkit-background-clip: text;
+    background-size: 70% 100%;
+    background-repeat: no-repeat;
+    transition: 0.4s;
 }
 
 .description{
@@ -44,17 +47,28 @@
     font-weight: 600;
     padding: 17px 26px;
     box-shadow: 0 0 4px 0 rgba(0,0,0,0.25);
+    transition: 0.3s;
 }
 
 .heroImg{
     width: 50%;
     z-index: 1;
-
     animation-name: floating;
     animation-duration: 3s;
     animation-iteration-count: infinite;
     animation-timing-function: ease-in-out;
 }
+
+.contactBtn:hover {
+    transform: scale(1.1);
+    background-color: white;
+    color: var(--color-dark);
+  }
+
+.title:hover {
+    background-size: 100% 100%;
+    transform: scale(1.05);
+  }
 
 @keyframes floating {
     0%{
@@ -105,3 +119,4 @@
         align-items: center;
     }
 }
+
