--- a/src/components/Skills/Skills.module.css
+++ b/src/components/Skills/Skills.module.css
@@ -23,7 +23,7 @@
 }
 
 .skills {
-    width: 80%;
+    width: 70%;
     display: flex;
     flex-wrap: wrap;
     gap: 37px;
@@ -60,4 +60,18 @@
 
 .skill :hover{
     transform:scale(1.1);
+}
+
+@media screen and (max-width: 830px) {
+    .content{
+        flex-direction: column;
+        align-items: center;
+        gap: 34px;
+    }
+
+    .skills{
+        width: 100%;
+        flex-direction: row;
+        justify-content: center;
+    }
 }
