--- a/src/components/Projects/ProjectsCard.module.css
+++ b/src/components/Projects/ProjectsCard.module.css
@@ -57,6 +57,16 @@
     font-weight: 600;
     border-radius: 100px;
     background: var(--color-primary);
-    padding: 1px 22px;
+    padding: 2px 22px;
+    transition: 0.3s;
 
+}
+
+.link:hover{
+    transform: scale(1.05);
+    background-color: var(--color-secondary);
+}
+
+.skill:hover{
+    transform: scale(1.05);
 }
