--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -1,120 +1,142 @@
+@import url("https://fonts.googleapis.com/css2?family=Unbounded:wght@700&display=swap");
 @import "../../vars.css";
 
 .container {
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-top: 49px;
-    z-index:1;
-    margin-left: 10%;
-    margin-right: 10%;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 49px;
+  z-index: 1;
+  margin-left: 10%;
+  margin-right: 10%;
 }
 
 .content {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    color:var(--color-text);
-    z-index: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  color: var(--color-text);
+  z-index: 1;
 }
 
 .title {
-    font-size: 72px;
-    font-weight: 900;
-    margin-bottom: 33px;
-    font-family: var(--font-roboto);
-    background: linear-gradient(90deg,rgb(255, 255, 255,1) 70%,rgba(255,255,255,0) 120%);
-    -webkit-text-fill-color: transparent;
-    -webkit-background-clip: text;
-    transition: 0.2s;
+  font-size: 72px;
+  font-weight: bold;
+  line-height: 1.1;
+  margin-bottom: 24px;
+  font-family: var(--font-roboto);
+  background: linear-gradient(
+    90deg,
+    rgb(255, 255, 255, 1) 70%,
+    rgba(255, 255, 255, 0) 120%
+  );
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
+  transition: 0.2s;
 }
 
-.description{
-    font-size: 30px;
-    font-family: var(--font-roboto);
-    margin-bottom: 52px;
+.name {
+  font-family: "Unbounded", cursive;
+  background: linear-gradient(90deg, #4ca5ff, #b673f8);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: glow 2s ease-in-out infinite alternate;
 }
 
-.contactBtn{
-    text-decoration: none;
-    background-color: var(--color-primary);
-    color:var(--color-text);
-    border-radius: 100px;
-    font-size: 30px;
-    font-weight: 600;
-    padding: 17px 26px;
-    box-shadow: 0 0 4px 0 rgba(0,0,0,0.25);
-    transition: 0.3s;
+.description {
+  font-size: 30px;
+  font-family: var(--font-roboto);
+  margin-bottom: 52px;
 }
 
-.heroImg{
-    width: 50%;
-    z-index: 1;
-    animation-name: floating;
-    animation-duration: 3s;
-    animation-iteration-count: infinite;
-    animation-timing-function: ease-in-out;
+.contactBtn {
+  text-decoration: none;
+  background-color: var(--color-primary);
+  color: var(--color-text);
+  border-radius: 100px;
+  font-size: 30px;
+  font-weight: 600;
+  padding: 17px 26px;
+  box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.25);
+  transition: 0.3s;
+}
+
+.heroImg {
+  width: 50%;
+  z-index: 1;
+  animation-name: floating;
+  animation-duration: 3s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
 }
 
 .contactBtn:hover {
-    transform: scale(1.1);
-    background-color: rgb(222, 222, 222);
-    color: var(--color-dark);
-  }
+  transform: scale(1.1);
+  background-color: rgb(222, 222, 222);
+  color: var(--color-dark);
+}
 
 .title:hover {
-    background-size: 100% 100%;
-    transform: scale(1.05);
-  }
+  background-size: 100% 100%;
+  transform: scale(1.05);
+}
 
 @keyframes floating {
-    0%{
-        transform: translate(0,0px);
-    }
-    50%{
-        transform: translate(0,10px);
-    }
-    100%{
-        transform: translate(0,0px);
-    }
+  0% {
+    transform: translate(0, 0px);
+  }
+  50% {
+    transform: translate(0, 10px);
+  }
+  100% {
+    transform: translate(0, 0px);
+  }
 }
 
-.topBlur{
-    position: absolute;
-    width: 50vw;
-    height: 50vw;
-    min-width: 350;
-    min-height: 350px;
-    top:-128px;
-    left: -10vw;
-    border-radius: 764px;
-    background: rgba(25,55,109,0.7);
-    filter: blur(100px);
-    z-index: 0;
+@keyframes glow {
+  from {
+    text-shadow: 0 0 10px #4ca5ff40;
+  }
+  to {
+    text-shadow: 0 0 20px #b673f840;
+  }
 }
 
-.bottomBlur{
-        position: absolute;
-        width: 70vw;
-        height: 50vw;
-        min-width: 250;
-        min-height: 350px;
-        top: 246px;
-        right: -25vw;
-        border-radius: 764px;
-        background: rgba(25,55,109,0.7);
-        filter: blur(100px);
-        z-index: 0;
+.topBlur {
+  position: absolute;
+  width: 50vw;
+  height: 50vw;
+  min-width: 350;
+  min-height: 350px;
+  top: -128px;
+  left: -10vw;
+  border-radius: 764px;
+  background: rgba(25, 55, 109, 0.7);
+  filter: blur(100px);
+  z-index: 0;
+}
+
+.bottomBlur {
+  position: absolute;
+  width: 70vw;
+  height: 50vw;
+  min-width: 250;
+  min-height: 350px;
+  top: 246px;
+  right: -25vw;
+  border-radius: 764px;
+  background: rgba(25, 55, 109, 0.7);
+  filter: blur(100px);
+  z-index: 0;
 }
 
 @media screen and (max-width: 830px) {
-    .container{
-        flex-direction: column-reverse;
-    }
+  .container {
+    flex-direction: column-reverse;
+  }
 
-    .content{
-        align-items: center;
-    }
+  .content {
+    align-items: center;
+  }
 }
-
